--- a/generic.html
+++ b/generic.html
@@ -47,39 +47,51 @@
 								<!-- <a href="https://en.wikipedia.org/wiki/Forbes_list_of_The_World%27s_100_Most_Powerful_Women">Wikipedia</a>-->
 
 								<h3>Data Exploration</h3>
-								<p>The data for the project is gathered from three sources. Using the Forbes lists from 2004 to find the most powerful women a list of 153 have been found, since women often appear more than once on the list. The website <a href="https://littlesis.org/lists/2687-the-worlds-most-powerful-women-2019/members">Little Sis</a> is used to gather all the relationship these women have with important organizations. When creating the network for the project each women will be representeed with a node, but nodes also consist of companies, businesses, schools and organizations that a woman has a relationship with. The Little sis data alone results in 1400 nodes in the network. Next, the wikipedia pages for the women are gatherd to gain even more connections, if there are more connections available on the wikipedia page then more nodes are creating. The wikipedia pages resulted in about 12.000 more nodes that were added to the network. The final network therefore consists of around 13.000 nodes and 18.000 edges, where and edge represents a connection between the two nodes.</p>
+								<p>The data for the project is gathered from three sources. Using the Forbes lists from 2004 to find the most 
+									powerful women a list of 153 have been found, since women often appear more than once on the list. The website 
+									<a href="https://littlesis.org/lists/2687-the-worlds-most-powerful-women-2019/members">Little Sis</a> is used 
+									to gather all the relationship these women have with important organizations. When creating the network for the 
+									project each women will be representeed with a node, but nodes also consist of companies, businesses, schools 
+									and organizations that a woman has a relationship with. The Little sis data alone results in 1400 nodes in the 
+									network. Next, the wikipedia pages for the women are gatherd to gain even more connections, if there are more 
+									connections available on the wikipedia page then more nodes are creating. The wikipedia pages resulted in about 
+									12.000 more nodes that were added to the network. The final network therefore consists of around 13.000 nodes 
+									and 18.000 edges, where and edge represents a connection between the two nodes.</p>
 
-								<p> <b>A simple example</b> of a node is Hillary Clinton who is one of the most powerful women. Hillary Clinton has an obvious connection to Bill Clinton, which means that Bill Clinton has now become a node in the network. An edge has now been created between Hillary and Bill. Since Bill is now a node in the network he will both have connections to women and other non-women nodes. In the network there is a connection between Bill Clinton and Barack Obama, since Barack Obama has been added as a node in relation to Michelle Obama who is one the most powerful women.<p>
+								<p> <b>A simple example</b> of a node is Hillary Clinton who is one of the most powerful women. Hillary Clinton has 
+									an obvious connection to Bill Clinton, which means that Bill Clinton has now become a node in the network. An 
+									edge has now been created between Hillary and Bill. Since Bill is now a node in the network he will both have 
+									connections to women and other non-women nodes. In the network there is a connection between Bill Clinton and 
+									Barack Obama, since Barack Obama has been added as a node in relation to Michelle Obama who is one the most 
+									powerful women.<p>
 
 
-									Text Analysis will be used in the project and since wikipedia pages often tend to be written quite neutral, it has been decided to gather the twitter feeds of the women as well. Unfortunately, only 58 of the women had a verified twitter account but the gathering of their most recent tweets resulted in 111.000 tweets being gathered.</p>
+									Text Analysis will be used in the project and since wikipedia pages often tend to be written quite neutral, it 
+									has been decided to gather the twitter feeds of the women as well. Unfortunately, only 58 of the women had a 
+									verified twitter account but the gathering of their most recent tweets resulted in 111.000 tweets being gathered.</p>
 
 								<hr />
-
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+				<footer id="footer">
+					<ul class="copyright">
+						<!--<p>
+							By three soon-to-be powerful women:
+						</p>-->
+						<p>Erla Hrafnkelsdóttir</br>
+						   Fanndís Kristinsdóttir</br>
+						   Rebekka Ormslev</p>
+					</ul>
+					<br>
+					<ul class="copyright">
+						<li>&copy; Most powerful women in the world, 2020 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
 
-			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
