--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 									<h2>Project overview</h2>
 									<p> This is the the final project in the course Social Graphs and Interactions, taught at DTU in the fall of 2020. <br>
 									    It is all about the network of the world's most powerful women. <br>
-									    To get a quick overview of the project, please check out this introduction video below. </p>
+										To get a quick overview of the project, please check out this introduction video below. <br>
+										Links to an explainer notebook and a Github repository can be found at the bottom of the page.
+									</p>
 									<video with ='620' height='400' controls>
 										<source src='Most powerful women.mp4' type = 'video/mp4'>
 											Your browser does not support the video tag.
@@ -237,6 +239,35 @@
 
 					</section>
 
+					<!-- Three -->
+					<section id="eight" class="wrapper style5 special">
+						<div class="inner">
+							<header class="major">
+								<h2 style='color:#87947f' >Age and birth places</h2>
+								<p style='color:#87947f' > To gain some further insight into who these women are, the birth year and birth place of each one will be obtained for visualizations. </p>
+							</header>
+							<ul class="features">
+								<li class="">
+									<center>
+									  <img src="images/age.png" alt="" style="height:300px">
+								  <center>
+									 <p>This age distribution doesn't come as much of a surprise. Most of the powerful women are in the mid- to upper 
+										 age range, from around 50 to 70 years old. These are women who have been working in their field for a long 
+										 time and established their place. The oldest woman on the list is Queen Elizabeth II, turning 94 years old 
+										 this year, and the youngest one, hardly a woman, is the 17-year-old Swedish global warming activist, 
+										 Greta Thunberg.</p>
+									</li>
+
+								<li class="">
+									<center>
+									  <img src="" alt="" style="height:450px">
+								  <center>
+									 <p>These results aren't really shocking - most of the powerful women are born in, or come from, the USA, or 44 of those who have available data on this. Other countries have just a few to one women being born in them. After the USA comes England, with 6 women being born there. </p>
+									</li>
+							</ul>
+						</div>
+					</section>
+
 					 <!-- Similarity -->
 					<section id="#similarity" class="wrapper alt style6">
 						<section class="spotlight">
@@ -360,16 +391,35 @@
 											who want to keep up a good reputation. They seem to be, as a result, quite composed in their tweets, not using
 											particularly strong words.</p>
 											<br>
-											<p style='color:#87947f'> According to the calculations Lady Gaga is the most positive powerful woman. When looking at her twitter feed she tends to be quite positive in her tweets and doesn’t tweet about negative things. The reason that her sentiment score isn’t higher than it already is could be because she calls her fans “her little monster” so monster often appears on her feed which has a negative score. <br>
-
-											Sophie Wilmés has the most negative sentiment score. Sophie is the Belgian deputy prime minister. When looking at her twitter profile it is noticeable that many of her tweets are in french and unfortunately the sentiment analysis only looks at english words so her sentiment score could be a little skewed. The reason that she has a score is because she retweets a lot of english tweets that are quite political and do contain generally quite neutral words. </p>
+											<p style='color:#87947f'> According to the calculations, Lady Gaga is the most positive powerful woman. 
+												When looking at her twitter feed she tends to be quite positive in her tweets and doesn’t tweet about 
+												negative things. The reason for her sentiment score not being higher than it already is could be because 
+												she calls her fans “her little monsters”, so monster often appears on her feed, a word which has a negative 
+												score. <br>
+												Sophie Wilmés has the most negative sentiment score. Sophie is the Belgian deputy prime minister. When looking 
+												at her twitter profile it is noticeable that many of her tweets are in French and unfortunately the sentiment 
+												analysis only takes into account English words - so her sentiment score could be a little skewed. The reason for her 
+												even having a score is that she retweets a lot of English tweets that are quite political and do contain 
+												generally quite neutral words. 
+											</p>
 						</section>
 
 						<section id="#one" class="wrapper style3 special">
 							<div class="inner">
 								<header class="major">
 									<h2>What is the perfect recipe for a woman to become powerful?</h2>
-									<p>SETJA INN RECIPE</p>
+									<p>
+										Be between the ages of 50 and 60 years old <br>
+										Be from the USA - and if not possible, move there <br>
+										Stick to one sector and become really good at it <br>
+										Be at the top of the businessworld as a CEO or CFO <br>
+										Become friends with the president of the USA<br>
+										Speak and write in a composed manner (no raging online!) <br>
+										Get someone to write an article about you for a big magazine
+									</p>
+									<p style="font-style: italic;">
+										And, if all else fails, just call Forbes and tell them you're one of the most powerful women in the world!
+									</p>
 
 									<br />
 								</header>
@@ -395,19 +445,22 @@
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<!--<h2>Arcue ut vel commodo</h2>
-								Bæta við með link hér að neðan! -->
-								<p>Here to the right, you can find</p>
-								<p>the project's explainer notebook</p>
-								<p>and it's Github repository.</p>
-							</header>
+						<div>
+							<center>
+								<p style="color: #2e3842;">
+									Below are links to the project's explainer notebook as well as a link to it's Github repository.
+								</p>
+							</center>
+							<br>
+						</div>
+						<div> 
+							<center>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Back to top</a></li>
-								<li><a href="#" class="button fit primary">Notebook</a></li>
-								<li><a href="https://github.com/fanndis/fanndis.github.io" class="button fit primary">Github</a></li>
+								<li><a href="#" class="button fit primary">Explainer notebook</a></li>
+								<li><a href="https://github.com/fanndis/fanndis.github.io" class="button fit primary">Github repository</a></li>
 							</ul>
+						</center>
 						</div>
 						<br>
 						<div>
