--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 								<li class="">
 									<center>
-									  <img src="" alt="" style="height:450px">
+									  <img src="IMAGE LOST" alt="" style="height:450px">
 								  <center>
 									 <p>These results aren't really shocking - most of the powerful women are born in, or come from, the USA, or 44 of those who have available data on this. Other countries have just a few to one women being born in them. After the USA comes England, with 6 women being born there. </p>
 									</li>
@@ -457,7 +457,7 @@
 							<center>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Back to top</a></li>
-								<li><a href="#" class="button fit primary">Explainer notebook</a></li>
+								<li><a href="https://nbviewer.jupyter.org/github/fanndis/fanndis.github.io/blob/main/Explainer-Notebook-Final.ipynb" class="button fit primary">Explainer notebook</a></li>
 								<li><a href="https://github.com/fanndis/fanndis.github.io" class="button fit primary">Github repository</a></li>
 							</ul>
 						</center>
