--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
 										To get a quick overview of the project, please check out this introduction video below. <br>
 										Links to an explainer notebook and a Github repository can be found at the bottom of the page.
 									</p>
-									<video with ='620' height='400' controls>
+									<iframe width="630" height="400" src="https://www.youtube.com/embed/Nf5cifV0txA" frameborder="0" allowfullscreen></iframe>
+									</iframe>
+									<!--<video with ='620' height='400' controls>
 										<source src='Most powerful women.mp4' type = 'video/mp4'>
 											Your browser does not support the video tag.
-										</video>
+										</video>-->
 								</header>
 								</ul>
 							</div>
