--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
 							<center>
 								<p style="color: #2e3842;">
 									Below are links to the project's explainer notebook as well as a link to it's Github repository.
+									CURRENTLY, the notebook is an old version, as the newer one has failed to uplaod.
 								</p>
 							</center>
 							<br>
@@ -459,7 +460,7 @@
 							<center>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Back to top</a></li>
-								<li><a href="https://nbviewer.jupyter.org/github/fanndis/fanndis.github.io/blob/main/Explainer-Notebook-Final.ipynb" class="button fit primary">Explainer notebook</a></li>
+								<li><a href="https://nbviewer.jupyter.org/github/fanndis/fanndis.github.io/blob/main/Explainer-Notebook.ipynb" class="button fit primary">Explainer notebook</a></li>
 								<li><a href="https://github.com/fanndis/fanndis.github.io" class="button fit primary">Github repository</a></li>
 							</ul>
 						</center>
