--- a/index.html
+++ b/index.html
@@ -450,8 +450,9 @@
 						<div>
 							<center>
 								<p style="color: #2e3842;">
-									Below are links to the project's explainer notebook as well as a link to it's Github repository.
-									CURRENTLY, the notebook is an old version, as the newer one has failed to uplaod.
+									Below are links to the project's explainer notebook as well as a link to it's Github repository.<br>
+									CURRENTLY, the NB viewer isn't working, or showing an old version of the notebook. 
+									Please download the explainer notebook from the Github repository instead.
 								</p>
 							</center>
 							<br>
