--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							<ul class="features">
 								<li class="">
 									<center>
-									  <img src="images/age.png" alt="" style="height:300px">
+									  <img src="images/age.png" alt="" style="height:270px">
 								  <center>
 									 <p>This age distribution doesn't come as much of a surprise. Most of the powerful women are in the mid- to upper 
 										 age range, from around 50 to 70 years old. These are women who have been working in their field for a long 
@@ -262,7 +262,7 @@
 
 								<li class="">
 									<center>
-									  <img src="IMAGE LOST" alt="" style="height:450px">
+									  <img src="images/women_world.JPG" alt="" style="height:270px">
 								  <center>
 									 <p>These results aren't really shocking - most of the powerful women are born in, or come from, the USA, or 44 of those who have available data on this. Other countries have just a few to one women being born in them. After the USA comes England, with 6 women being born there. </p>
 									</li>
@@ -392,14 +392,15 @@
 											what they write. However, this is understandable to quite an extent, since these are public figures
 											who want to keep up a good reputation. They seem to be, as a result, quite composed in their tweets, not using
 											particularly strong words.</p>
-											<br>
+											
 											<p style='color:#87947f'> According to the calculations, Lady Gaga is the most positive powerful woman. 
-												When looking at her twitter feed she tends to be quite positive in her tweets and doesn’t tweet about 
+												When looking at her Twitter feed she tends to be quite positive in her tweets and doesn’t tweet about 
 												negative things. The reason for her sentiment score not being higher than it already is could be because 
-												she calls her fans “her little monsters”, so monster often appears on her feed, a word which has a negative 
+												she calls her fans “her little monsters”, so monster often appears on her feed - a word which has a negative 
 												score. <br>
+												<br>
 												Sophie Wilmés has the most negative sentiment score. Sophie is the Belgian deputy prime minister. When looking 
-												at her twitter profile it is noticeable that many of her tweets are in French and unfortunately the sentiment 
+												at her Twitter profile it is noticeable that many of her tweets are in French and unfortunately the sentiment 
 												analysis only takes into account English words - so her sentiment score could be a little skewed. The reason for her 
 												even having a score is that she retweets a lot of English tweets that are quite political and do contain 
 												generally quite neutral words. 
@@ -409,7 +410,7 @@
 						<section id="#one" class="wrapper style3 special">
 							<div class="inner">
 								<header class="major">
-									<h2>What is the perfect recipe for a woman to become powerful?</h2>
+									<h2>Now, what is the perfect recipe for a woman to become powerful?</h2>
 									<p>
 										Be between the ages of 50 and 60 years old <br>
 										Be from the USA - and if not possible, move there <br>
