--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 							<center>
 								<p style="color: #2e3842;">
 									Below are links to the project's explainer notebook as well as a link to it's Github repository.<br>
-									CURRENTLY, the NB viewer isn't working, or showing an old version of the notebook. 
-									Please download the explainer notebook from the Github repository instead.
+									If the notebook link isn't working, or shows an old, unfinished book, then please view or download <br>
+									the explainer notebook from the Github repository instead.
 								</p>
 							</center>
 							<br>
