--- a/index.html
+++ b/index.html
@@ -451,9 +451,7 @@
 						<div>
 							<center>
 								<p style="color: #2e3842;">
-									Below are links to the project's explainer notebook as well as a link to it's Github repository.<br>
-									If the notebook link isn't working, or shows an old, unfinished book, then please view or download <br>
-									the explainer notebook from the Github repository instead.
+									Below are links to the project's explainer notebook as well as a link to it's Github repository.
 								</p>
 							</center>
 							<br>
@@ -462,7 +460,7 @@
 							<center>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Back to top</a></li>
-								<li><a href="https://nbviewer.jupyter.org/github/fanndis/fanndis.github.io/blob/main/Explainer-Notebook.ipynb" class="button fit primary">Explainer notebook</a></li>
+								<li><a href="https://nbviewer.jupyter.org/github/erlahrafnkels/SocialGraphs2020/blob/main/Explainer-Notebook.ipynb" class="button fit primary">Explainer notebook</a></li>
 								<li><a href="https://github.com/fanndis/fanndis.github.io" class="button fit primary">Github repository</a></li>
 							</ul>
 						</center>
