--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 						<ul class="copyright">
 							<li>&copy; Most powerful women in the world, 2020 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer>
+					</footer><!--comment-->
 
 			</div>
 
